--- a/package.json
+++ b/package.json
@@ -1,54 +1,31 @@
-
 {
-  "name": "word2vec-explorer",
-  "version": "0.0.1",
-  "description": "Explore highly dimensional data",
-  "scripts": {
-    "test": "mocha test/unit/**/*.js",
-    "build": "browserify --extension=.jsx ui/main.jsx | uglifyjs -cm > public/js/core.js",
-    "start": "watchify --extension=.jsx -o public/js/core.js -v -d ui/main.jsx"
-  },
-  "browser": {
-    "bootstrap": "./node_modules/bootstrap/dist/js/bootstrap.js"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  },
-  "babel": {
-    "plugins": [
-      "add-module-exports"
-    ],
-    "presets": [
-      "react",
-      "es2015"
-    ]
-  },
+  "name": "word2vec-visualizer",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "jquery": "2.2.0",
-    "bootstrap": "3.3.6",
-    "d3": "3.5.16",
-    "async": "1.5.2",
-    "react-router": "1.0.3",
-    "history": "1.17.0",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "three.js": "0.73.2",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-es2015": "6.3.13",
-    "babel-plugin-add-module-exports": "0.1.2"
+    "d3": "^5.7.0",
+    "es6-promise": "^4.2.5",
+    "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1"
   },
-  "devDependencies": {
-    "browserify": "*",
-    "babelify": "*",
-    "watchify": "*",
-    "uglifyjs": "*",
-    "standard": "*"
+  "scripts": {
+    "start": "PORT=3030 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "standard": {
-    "ignore": [
-      "public/**"
-    ]
-  }
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
